docs: update README and AGENTS.md with monorepo structure and architecture